--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -102,10 +102,6 @@
 }
 
 @media (max-width:550px){
-    .container{
-        padding-left: 15px;
-        padding-right: 15px;
-    }
     .want{
         &__title-link{
             font-size: 18px;
