--- a/sass/blocks/_slider-small.scss
+++ b/sass/blocks/_slider-small.scss
@@ -13,10 +13,11 @@
          height: 40px;
          content: '';
          right: 0;
-         bottom: 0;
+         top: 0;
          border: 2px $orange solid;
          border-radius: 50%;
          background-color: #fff;
+         margin: 0;
          &.popular-slider__btn-prev{
             left: calc(100% - 86px);
          }
